--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,21 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/portada"
-        android:logo="@mipmap/portada"
         android:label="@string/app_name"
+        android:logo="@mipmap/portada"
         android:roundIcon="@mipmap/portada"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+
         <!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar" -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivityVideo"></activity>
     </application>
 
 </manifest>
